<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_student"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/foto" />

                <TextView
                    android:id="@+id/tv_student"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="10dp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical|right"
                android:orientation="horizontal">

                <TextView

                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/class_" />
                <TextView
                    android:id="@+id/tv_class"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:background="@drawable/border">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/border"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:text="@string/absences"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_absences"
                            android:textAlignment="center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:layout_marginTop="10dp"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tv_absences_month"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:layout_marginTop="10dp"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:layout_marginTop="5dp"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/total"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:layout_marginTop="5dp"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/last_month"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:background="@drawable/border">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/border"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:text="@string/tasks"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_tasks"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:layout_marginTop="10dp"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tv_tasks_tomorrow"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:layout_marginTop="10dp"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_marginTop="5dp"
                            android:text="@string/total"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_marginTop="5dp"
                            android:text="@string/last_month"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:background="@drawable/border">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@drawable/border"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:text="@string/results"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_results"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:layout_marginTop="10dp"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tv_results_period"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:layout_marginTop="10dp"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_marginTop="5dp"
                            android:text="@string/total"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_marginTop="5dp"
                            android:text="@string/last_month"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_subjects"
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/subjects" />

                <ListView
                    android:id="@+id/lv_subjects"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="#00000000"
                    android:dividerHeight="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_absence"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/absences" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lv_absences"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"></android.support.v7.widget.RecyclerView>
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>

